testsuite/tests/typecheck/should_fail/T14048c.stderr

T14048c.hs:9:1: error: [GHC-55233]
    • Data instance has non-* return kind ‘Constraint’
    • In the data instance declaration for ‘Foo’
